tests/err03.json.err
Parse error at line 002

001: {
002: 	,
     	^
Expected ID string
